--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "cli-table": "^0.3.1",
     "commander": "^4.0.1",
+    "key-file-storage": "^2.2.6",
     "superagent": "^5.1.1"
   }
 }
