--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cli-table": "^0.3.1",
     "commander": "^4.0.1",
     "key-file-storage": "^2.2.6",
+    "loglevel": "^1.6.6",
     "superagent": "^5.1.1"
   }
 }
