--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "is-ip": "^3.1.0",
     "key-file-storage": "^2.2.6",
     "loglevel": "^1.6.6",
+    "pkginfo": "^0.4.1",
     "superagent": "^5.1.1"
   }
 }
