fix: ci release task

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
     needs: test
     if: github.ref == 'refs/heads/master'
     steps:
+    - uses: actions/checkout@v1
     - name: Release
       uses: cycjimmy/semantic-release-action@v2
       with:
