--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,11 +4,11 @@
     ["@semantic-release/commit-analyzer", { "preset": "angular" }],
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "preset": "angular" }],
+    "@semantic-release/npm",
     ["@semantic-release/git", {
       "assets": ["package.json", "CHANGELOG.md"],
       "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
     }],
-    "@semantic-release/github",
-    "@semantic-release/npm"
+    "@semantic-release/github"
   ]
 }
