--- a/package.json
+++ b/package.json
@@ -41,14 +41,19 @@
     "should": "^13.2.3"
   },
   "dependencies": {
+    "@iarna/toml": "^2.2.5",
     "cli-table": "^0.3.1",
     "commander": "^5.1.0",
     "is-ip": "^3.1.0",
+    "is-wsl": "^2.2.0",
     "key-file-storage": "^2.2.8",
     "lodash": "^4.17.15",
     "loglevel": "^1.6.7",
     "loglevel-plugin-prefix": "^0.8.4",
+    "mkdirp": "^1.0.4",
+    "npm-registry-client": "^8.6.0",
     "pkginfo": "^0.4.1",
+    "promptly": "^3.0.3",
     "superagent": "^5.2.2",
     "superagent-proxy": "^2.0.0",
     "update-notifier": "^4.1.0"
