--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "chalk": "^4.1.0",
     "cli-table": "^0.3.1",
     "commander": "^5.1.0",
     "is-ip": "^3.1.0",
