--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "is-ip": "^3.1.0",
     "is-wsl": "^2.2.0",
     "key-file-storage": "^2.2.8",
+    "libnpmsearch": "^3.0.0",
     "lodash": "^4.17.15",
     "mkdirp": "^1.0.4",
     "npm-registry-client": "^8.6.0",
+    "npm-registry-fetch": "^8.1.3",
     "npmlog": "^4.1.2",
     "pkginfo": "^0.4.1",
     "promptly": "^3.0.3",
-    "superagent": "^5.2.2",
-    "superagent-proxy": "^2.0.0",
     "update-notifier": "^4.1.0"
   }
 }
