fix: reject package installation if current editor version is not qualified (refs: #16)

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "npmlog": "^4.1.2",
     "pkginfo": "^0.4.1",
     "promptly": "^3.0.3",
-    "update-notifier": "^4.1.0"
+    "update-notifier": "^4.1.0",
+    "yaml": "^1.10.0"
   }
 }
