fix: allow running cli with npx v7

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "bin": {
     "openupm": "bin/openupm",
+    "openupm-cli": "bin/openupm",
     "openupm-cn": "bin/openupm-cn"
   },
   "repository": {
