feat: cli requires node 14

--- a/package.json
+++ b/package.json
@@ -28,38 +28,38 @@
   },
   "homepage": "https://openupm.com",
   "devDependencies": {
-    "@semantic-release/changelog": "^3.0.6",
-    "@semantic-release/git": "^7.0.18",
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^6.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "mocha": "^6.2.3",
-    "nock": "^11.9.1",
-    "prettier": "^1.19.1",
-    "semantic-release": "^17.2.3",
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "^7.17.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.7.1",
+    "mocha": "^10.0.0",
+    "nock": "^13.2.4",
+    "prettier": "^2.6.2",
+    "semantic-release": "^19.0.2",
     "should": "^13.2.3",
-    "test-console": "^1.1.0"
+    "test-console": "^2.0.0"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
-    "chalk": "^4.1.0",
-    "cli-table": "^0.3.1",
-    "commander": "^5.1.0",
-    "is-ip": "^3.1.0",
+    "chalk": "^4.1.2",
+    "cli-table": "^0.3.11",
+    "commander": "^9.2.0",
     "is-wsl": "^2.2.0",
-    "key-file-storage": "^2.2.8",
-    "libnpmsearch": "^3.0.0",
-    "lodash": "^4.17.15",
+    "key-file-storage": "^2.2.10",
+    "libnpmsearch": "^5.0.3",
+    "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "npm-registry-client": "^8.6.0",
-    "npm-registry-fetch": "^8.1.3",
-    "npmlog": "^4.1.2",
+    "npm-registry-fetch": "^13.1.1",
+    "npmlog": "^6.0.2",
     "pkginfo": "^0.4.1",
-    "promptly": "^3.0.3",
-    "update-notifier": "^4.1.0",
-    "yaml": "^1.10.0"
+    "promptly": "^3.2.0",
+    "update-notifier": "^5.1.0",
+    "yaml": "^2.0.1"
   }
 }
