--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "another-npm-registry-client": "^8.6.1",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
     "commander": "^9.2.0",
+    "fs-extra": "^10.1.0",
     "is-wsl": "^2.2.0",
     "libnpmsearch": "^5.0.3",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
-    "npm-registry-client": "^8.6.0",
     "npm-registry-fetch": "^13.1.1",
     "npmlog": "^6.0.2",
     "pkginfo": "^0.4.1",
