--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install
-      run: npm install
+    - name: npm ci
+      run: npm ci
     - name: npm run test
       run: npm run test
 
