--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Upgrade NPM
+      run: npm install -g npm
     - name: npm ci
       run: npm ci
     - name: npm run test
