fix: eslint errors in typescript-files
Eslint was complaining about various keywords being reserved and was unerlining them. Fixed by installing `typescript-eslint` according to [this guide](https://typescript-eslint.io/getting-started)

--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "@types/pkginfo": "^0.4.1",
     "@types/promptly": "^3.0.3",
     "@types/update-notifier": "^6.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.15.0",
+    "eslint": "^8.51.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
