--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "tsc && cross-env NODE_ENV=test mocha",
     "semantic-release": "semantic-release"
   },
