--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && cross-env NODE_ENV=test mocha",
+    "test": "tsc && cross-env NODE_ENV=test ts-mocha test/**/*.ts",
     "semantic-release": "semantic-release"
   },
   "bin": {
@@ -37,13 +37,17 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@types/cli-table": "^0.3.2",
+    "@types/fs-extra": "^11.0.3",
     "@types/libnpmsearch": "^2.0.4",
     "@types/lodash": "^4.14.199",
+    "@types/mocha": "^10.0.3",
     "@types/node": "^14.18.63",
     "@types/npmlog": "^4.1.4",
     "@types/pkginfo": "^0.4.1",
     "@types/promptly": "^3.0.3",
     "@types/request": "^2.48.11",
+    "@types/should": "^13.0.0",
+    "@types/test-console": "^2.0.1",
     "@types/update-notifier": "^6.0.5",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
@@ -58,6 +62,7 @@
     "semantic-release": "^19.0.3",
     "should": "^13.2.3",
     "test-console": "^2.0.0",
+    "ts-mocha": "^10.0.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
