--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,15 @@ jobs:
       run: npm ci
     - name: npm run test
       run: npm run test
-
+      
   release:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v3
+    - name: Build
+      run: npm run build
     - name: Release
       uses: cycjimmy/semantic-release-action@v3
       with:
