--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "cross-env NODE_ENV=test ts-mocha test/**/*.ts",
-    "build": "tsc -p tsconfig.json",
+    "clean": "rimraf lib",
+    "build": "npm run clean && tsc -p tsconfig.json",
     "build:watch": "tsc -w -p tsconfig.json",
     "semantic-release": "semantic-release"
   },
@@ -59,6 +60,7 @@
     "mocha": "^10.0.0",
     "nock": "^13.2.4",
     "prettier": "^2.6.2",
+    "rimraf": "^5.0.5",
     "semantic-release": "^19.0.3",
     "should": "^13.2.3",
     "test-console": "^2.0.0",
