feat: convert project to TypeScript (#52), require node v16
* fix: eslint-prettier error

When attempting to fix eslint rules in file, the following error appeared

```Error: "prettier/vue" has been merged into "prettier" in eslint-config-prettier 8.0.0. See: https://github.com/prettier/eslint-config-prettier/blob/main/CHANGELOG.md#version-800-2021-02-21```

Reading the linked changelog, it seemed the fix was to simply only use the prettier/recommended extension. Simplified eslintrc to reflect this.

* deps: install typescript

* misc: ignore builds

* feat: convert to typescript

* fix: eslint-prettier error

When attempting to fix eslint rules in file, the following error appeared

```Error: "prettier/vue" has been merged into "prettier" in eslint-config-prettier 8.0.0. See: https://github.com/prettier/eslint-config-prettier/blob/main/CHANGELOG.md#version-800-2021-02-21```

Reading the linked changelog, it seemed the fix was to simply only use the prettier/recommended extension. Simplified eslintrc to reflect this.

* fix: eslint errors in typescript-files

Eslint was complaining about various keywords being reserved and was unerlining them. Fixed by installing `typescript-eslint` according to [this guide](https://typescript-eslint.io/getting-started)

* misc: apply eslint rules

reformat and clean-up using new eslint config

* chore(deps): bump mkdirp

Bumped because >=2 includes typings and seemingly no other breaking changes

* chore: fix eslint end-of-line error

On my Windows machine eslint was constantly complaining about line endings. Fixed using this answer https://stackoverflow.com/a/53769213

* feat: ambient typings for js module

Add ambient typings for another-npm-registry-client

* refactor: move file

Move types file into types folder

* refactor: add basic type for NpmClient

Based on usage. Could use some cleanup

* refactor: declare global types

Declare types instead of exporting them for easier

--- a/.npmignore
+++ b/.npmignore
@@ -3,3 +3,13 @@
 .eslintrc.js
 test/
 .vscode/
+src/
+!lib/
+.github/
+.idea/
+.nvmrc
+.node-version
+.releaserc.json
+tsconfig.json
+*.tgz
+*.tar.gz
