--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,31 +10,33 @@ jobs:
         node-version: [16.x]
     name: CI - node ${{ matrix.node-version }}
     steps:
-    - uses: actions/checkout@v3
-    - name: set node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm ci
-      run: npm ci
-    - name: npm run test
-      run: npm run test
-      
+      - uses: actions/checkout@v3
+      - name: set node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm ci
+        run: npm ci
+      - name: npm run test
+        run: npm run test
+
   release:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/master'
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: npm run build
-    - name: Release
-      uses: cycjimmy/semantic-release-action@v3
-      with:
-        extra_plugins: |
-          @semantic-release/changelog
-          @semantic-release/git
-        branch: master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: npm install
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Release
+        uses: cycjimmy/semantic-release-action@v3
+        with:
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
+          branch: master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
