--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.7.1",
+    "fast-check": "^3.13.2",
     "mocha": "^10.0.0",
     "nock": "^13.2.4",
     "prettier": "^2.6.2",
