--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "@types/lodash": "^4.14.199",
     "@types/mocha": "^10.0.3",
     "@types/node": "^14.18.63",
+    "@types/node-fetch": "^2.6.9",
     "@types/npmlog": "^4.1.4",
     "@types/pkginfo": "^0.4.1",
     "@types/promptly": "^3.0.3",
-    "@types/request": "^2.48.11",
+    "@types/request": "^2.48.12",
     "@types/test-console": "^2.0.1",
     "@types/update-notifier": "^6.0.5",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
