--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "npmlog": "^6.0.2",
     "pkginfo": "^0.4.1",
     "promptly": "^3.2.0",
+    "semver": "^7.5.4",
     "ts-brand": "^0.0.2",
     "update-notifier": "^5.1.0",
     "yaml": "^2.0.1"
