--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.17.0",
+    "@commander-js/extra-typings": "^9.5.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "@types/cli-table": "^0.3.2",
@@ -72,7 +73,7 @@
     "another-npm-registry-client": "^8.7.0",
     "chalk": "^4.1.2",
     "cli-table": "^0.3.11",
-    "commander": "^9.3.0",
+    "commander": "^9.5.0",
     "fs-extra": "^10.1.0",
     "is-wsl": "^2.2.0",
     "libnpmsearch": "^5.0.3",
