chore: additional test script
Adds a second test script for the project.

- `test:quick` runs test without type-checking
- `test:full` fully compiles ts before running tests, helping to uncover errors

Adjusted the cli to run `test:full`.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build
         run: npm run build
       - name: npm run test
-        run: npm run test
+        run: npm run test:full
 
   release:
     runs-on: ubuntu-latest
