--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "node": ">=16"
   },
   "scripts": {
-    "test:quick": "cross-env NODE_ENV=test ts-mocha test/**/test-*.ts",
-    "test:full": "cross-env NODE_ENV=test ts-mocha test/**/test-*.ts --type-check",
+    "test:full": "cross-env NODE_ENV=test jest --runInBand",
     "clean": "rimraf lib",
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "build:watch": "tsc -w -p tsconfig.build.json",
