--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@badrap/result": "^0.2.13",
     "@commander-js/extra-typings": "^9.5.0",
     "@iarna/toml": "^2.2.5",
     "another-npm-registry-client": "^8.7.0",
@@ -84,6 +83,7 @@
     "semver": "^7.5.4",
     "ts-brand": "^0.0.2",
     "ts-custom-error": "^3.3.1",
+    "ts-results-es": "^4.1.0",
     "update-notifier": "^5.1.0",
     "yaml": "^2.2.2"
   },
