--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsdoc": "^47.0.2",
+    "fast-check": "^3.16.0",
     "jest": "^29.7.0",
     "nock": "^13.2.4",
     "prettier": "^2.8.8",
