on pull-request

--- a/.github/workflows/e2e-linux-docker-publish.yml
+++ b/.github/workflows/e2e-linux-docker-publish.yml
@@ -3,7 +3,9 @@ on:
   push:
     paths:
       - './docker/e2e.linux.Dockerfile'
-
+  pull_request:
+    paths:
+      - './docker/e2e.linux.Dockerfile'
 jobs:
   push_to_registry:
     name: Push Docker image to package registry
