--- a/.github/workflows/e2e-linux-docker-publish.yml
+++ b/.github/workflows/e2e-linux-docker-publish.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          file: {context}/docker/e2e.linux.Dockerfile
+          file: ./docker/e2e.linux.Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository }}-e2e-linux:latest
