--- a/.github/workflows/e2e-linux-docker-publish.yml
+++ b/.github/workflows/e2e-linux-docker-publish.yml
@@ -1,5 +1,11 @@
 name: Publish Docker e2e.linux image
-on: pull_request
+on:
+  push:
+    paths:
+      - './docker/e2e.linux.Dockerfile'
+  pull_request:
+    paths:
+      - './docker/e2e.linux.Dockerfile'
 jobs:
   push_to_registry:
     name: Push Docker image to package registry
