--- a/.github/workflows/e2e-linux-docker-publish.yml
+++ b/.github/workflows/e2e-linux-docker-publish.yml
@@ -2,12 +2,12 @@ name: Publish Docker e2e.linux image
 on:
   push:
     paths:
-      - './docker/e2e.linux.Dockerfile'
-      - './.github/workflows/e2e-linux-docker-publish.yml'
+      - 'docker/e2e.linux.Dockerfile'
+      - '.github/workflows/e2e-linux-docker-publish.yml'
   pull_request:
     paths:
-      - './docker/e2e.linux.Dockerfile'
-      - './.github/workflows/e2e-linux-docker-publish.yml'
+      - 'docker/e2e.linux.Dockerfile'
+      - '.github/workflows/e2e-linux-docker-publish.yml'
 jobs:
   push_to_registry:
     name: Push Docker image to package registry
