--- a/docker/e2e/windows/Dockerfile
+++ b/docker/e2e/windows/Dockerfile
@@ -3,4 +3,4 @@ LABEL authors="comradevanti"
 
 FROM unityhub as editors
 
-RUN unity-hub --headless install --version 2021.3.38f1 --changeset 7a2fa5d8d101
+RUN unity-hub install --version 2021.3.38f1 --changeset 7a2fa5d8d101
