Revert "run build on corresponding os"
This reverts commit 706aedc160d885b4017809ba1e7de48c3693095f.

--- a/.github/workflows/e2e-images.yml
+++ b/.github/workflows/e2e-images.yml
@@ -7,7 +7,7 @@ env:
 
 jobs: 
   publish_e2e_images:
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ubuntu-latest
     
     permissions:
       contents: read
