--- a/.github/workflows/e2e-images.yml
+++ b/.github/workflows/e2e-images.yml
@@ -3,11 +3,11 @@ on: [pull_request]
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: e2e-${{ github.repository }}
 
 jobs: 
   publish_e2e_images:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}-latest
     
     permissions:
       contents: read
@@ -24,28 +24,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
+
+      - name: Build and push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
         with:
+          image: ${{ env.REGISTRY }}/e2e-${{matrix.os}}-${{ env.IMAGE_NAME }}
+          dockerfile: docker/e2e/${{matrix.os}}/Dockerfile
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: docker/e2e/${{matrix.os}}/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
