--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "bin": {
     "openupm": "lib/index.js",
-    "openupm-cli": "lib/index.js",
-    "openupm-cn": "lib/index-cn.js"
+    "openupm-cli": "lib/index.js"
   },
   "repository": {
     "type": "git",
