wget no progress

--- a/docker/e2e/ubuntu/Dockerfile
+++ b/docker/e2e/ubuntu/Dockerfile
@@ -12,6 +12,6 @@ FROM install-os-deps as editor
 ENV UNITY_VERSION=2022.3.32f1
 RUN mkdir -p ~/Unity/Hub/Editor/${UNITY_VERSION}/Editor
 RUN cd ~/Unity/Hub/Editor/${UNITY_VERSION}/Editor
-RUN wget -O - https://download.unity3d.com/download_unity/c8300dc0a3fa/LinuxEditorInstaller/Unity-${UNITY_VERSION}.tar.xz > ./editor.tar.xz
+RUN wget -O ./editor.tar.xz -q https://download.unity3d.com/download_unity/c8300dc0a3fa/LinuxEditorInstaller/Unity-${UNITY_VERSION}.tar.xz
 RUN tar -xJf ./editor.tar.xz
 RUN rm ./editor.tar.xz
