remove env variable

--- a/docker/e2e/windows/Dockerfile
+++ b/docker/e2e/windows/Dockerfile
@@ -3,6 +3,5 @@ LABEL authors="comradevanti"
 
 FROM os as editor
 
-ENV UNITY_VERSION=2022.3.32f1
-RUN curl -O UnitySetup64.exe https://download.unity3d.com/download_unity/c8300dc0a3fa/Windows64EditorInstaller/UnitySetup64-${UNITY_VERSION}.exe
+RUN curl -O UnitySetup64.exe https://download.unity3d.com/download_unity/c8300dc0a3fa/Windows64EditorInstaller/UnitySetup64-2022.3.32f1.exe
 RUN .\UnitySetup64 \S
