change home syntax

--- a/docker/e2e/windows/Dockerfile
+++ b/docker/e2e/windows/Dockerfile
@@ -3,6 +3,6 @@ LABEL authors="comradevanti"
 
 FROM os as editor
 
-RUN cd ~
+RUN cd %userprofile%
 RUN curl -o UnitySetup64.exe https://download.unity3d.com/download_unity/c8300dc0a3fa/Windows64EditorInstaller/UnitySetup64-2022.3.32f1.exe
 RUN .\UnitySetup64 \S
