--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,10 @@ jobs:
     name: E2E Tests
     steps:
       - uses: actions/checkout@v3
-      - name: set node.js 18
+      - name: setup node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18 
       - name: install deps
         run: npm ci
       - name: build
