--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,24 +19,30 @@ jobs:
         run: npm ci
       - name: Unit tests
         run: npm run test:unit
+        
   e2e-test:
     runs-on: ubuntu-latest
+    container: ghcr.io/openupm/openupm-cli-e2e-${{ matrix.os }}:latest
     strategy:
       matrix:
-        node-version: [18.x]
+        os: 
+          - ubuntu
+          # Seems like windows is not supported at the moment (06.2024)
+          # - windows
     name: E2E Tests
     steps:
       - uses: actions/checkout@v3
-      - name: set node.js ${{ matrix.node-version }}
+      - name: setup node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18 
       - name: install deps
         run: npm ci
       - name: build
         run: npm run build
       - name: run tests
         run: npx jest --testMatch "**/*.e2e.ts" --runInBand
+        
   release:
     runs-on: ubuntu-latest
     needs: 
