refactor npm login logic
Currently we use `another-npm-registry-client` for loging in users. This is a fork of a deprecated library. This change instead uses the currently maintained library from logging in users by npm. Just to modernize the dependencies a bit.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^29.5.12",
     "@types/libnpmsearch": "^2.0.4",
     "@types/node": "^18.19.31",
+    "@types/npm-profile": "^5.0.5",
     "@types/npmlog": "^4.1.4",
     "@types/pkginfo": "^0.4.1",
     "@types/promptly": "^3.0.3",
@@ -75,6 +76,7 @@
     "libnpmsearch": "^5.0.3",
     "mkdirp": "^3.0.1",
     "node-fetch": "^2.7.0",
+    "npm-profile": "^11.0.0",
     "npm-registry-fetch": "^13.1.1",
     "npmlog": "^6.0.2",
     "pkginfo": "^0.4.1",
